[package]
name = "mlib"
version = "0.1.2"
authors = ["Minejerik"]
license = "MIT"
description = "Minejerik's library used in all of my projects"
readme = "README.md"
homepage = "https://github.com/Minejerik/mlib"
repository = "https://github.com/Minejerik/mlib"
documentation = "https://github.com/Minejerik/mlib"

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"